# petsc

./: CMakeLists.txt  makefile
blitz/: CMakeLists.txt  wave.cpp
diffusion/: CMakeLists.txt  diffusion.cpp  ode.cpp
nonlinear/: CMakeLists.txt  ecjac.cpp  expcircle.cpp  reaction.cpp
poisson/: poisson.cc
vec/: vector.cc
wave/: makefile  spherical_periodic.cc  spherical_wave.cc  wave
